# jean-travail

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
jtravail/: __init__.py  cli.py  options.py  pomodoro.py
tests/: conftest.py  test_cli.py  test_next.py  test_pomodoro.py  test_start.py  test_status.py  test_status_commands.py  test_stop.py
